# x64dbg_mcp

./: .gitignore  LICENSE  PROMOTION.md  README.md  install.ps1
plugin/: CMakeLists.txt  CMakePresets.json  plugin.def  vcpkg.json
plugin/src/: plugin_main.cpp  plugin_main.h
plugin/src/bridge/: c_bridge_executor.cpp  c_bridge_executor.h
plugin/src/handlers/: analysis_handler.cpp  breakpoint_handler.cpp  command_handler.cpp  debug_handler.cpp  disasm_handler.cpp  dumping_handler.cpp  exceptions_handler.cpp  memory_handler.cpp  module_handler.cpp  patch_handler.cpp  register_handler.cpp  search_handler.cpp  stack_handler.cpp  symbol_handler.cpp  thread_handler.cpp  tracing_handler.cpp
plugin/src/http/: c_http_server.cpp  c_http_server.h  s_http_response.h
plugin/src/ui/: settings_dialog.cpp
server/: README.md  package-lock.json  package.json  server.json
server/src/: config.ts  http_client.ts  index.ts
server/src/tools/: analysis.ts  antidebug.ts  breakpoints.ts  command.ts  controlflow.ts  debug.ts  disassembly.ts  dumping.ts  exceptions.ts  handles.ts  index.ts  memmap.ts  memory.ts  modules.ts  patches.ts  process.ts  registers.ts  search.ts  stack.ts  symbols.ts  threads.ts  tracing.ts
